# financial-news-summarizer

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  prompts.py  pyproject.toml  requirements.txt
data/: yahoo_news_tsla.csv
data/dataset/: clean_dataset.csv  few_shot_dataset_by_qwen.csv  ready_dataset.csv  zero_shot_dataset_by_gpt.csv  zero_shot_dataset_by_qwen.csv
notebooks/: calculate_metrics.ipynb  eda.ipynb  finetune_qwen.ipynb
scripts/: load_news.py  process_dataset.py  process_dataset_gpt.py  prompts.py  summarize_news.py
